# rambutan

./: .bumpversion.cfg  .flake8  .gitignore  CLAUDE.md  Dockerfile  README.md  agent-orchestrator.yaml  docker-compose.yml  requirement.txt
.claude/: settings.json
.github/workflows/: ci.yml
applications/: __init__.py
applications/images/: __init__.py  handle.py  handleImage.py
applications/images/pnglib/: CMakeLists.txt
apps/: __init__.py
apps/images/: handle.py  handleImage.py
apps/images/pnglib/: __init__.py  pngquant.py  pngquant_tiny.c
apps/templates/images/: aimg.html
apps/views/images/: __init__.py  mixins.py  views.py
apps/views/images/handles/: jpg_handle.py
config/: default.py
docker/conf/: gunicorn
engine/: Dockerfile  supervisord.conf
flask_storage/: base.py  local_storage.py  oss_storage.py  remote_storage.py
instance/: config.py  default.py
manifests/: README.md  office.yaml  v.yaml  w.yaml  www.yaml
requirement/: base.txt  prod.txt
tests/: test_crop.py  test_float_crop.py  test_storage.py
